# serializer version: 1
# name: test_sensors[sensor.netgear_lm1200_cell_id]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Cell ID',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_cell_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12345678',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_connection_text]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Connection text',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_connection_text',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4G',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_connection_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Connection type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_connection_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'IPv4AndIPv6',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_current_band]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Current band',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_current_band',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LTE B4',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_radio_quality]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Radio quality',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_radio_quality',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '52',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_register_network_display]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Register network display',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_register_network_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'T-Mobile',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_rx_level]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Netgear LM1200 Rx level',
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_rx_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-113',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_service_type]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Service type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_service_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LTE',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_sms]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 SMS',
      'unit_of_measurement': 'unread',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_sms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_sms_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 SMS total',
      'unit_of_measurement': 'messages',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_sms_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_tx_level]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Netgear LM1200 Tx level',
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_tx_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_upstream]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Netgear LM1200 Upstream',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_upstream',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'LTE',
  })
# ---
# name: test_sensors[sensor.netgear_lm1200_usage]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'Netgear LM1200 Usage',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.netgear_lm1200_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.5162000656128',
  })
# ---
